// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.filters";
option java_outer_classname = "FiltersProto";

option go_package = "github.com/jona9901/dc-final/proto";

package proto;

// The greeting service definition.
service Filter {
  // Sends a greeting
  rpc ApplyFilter (FilterRequest) returns (FilterReply) {}
}

// The request message containing the .
message FilterRequest {
  string filter = 1;
  string DownloadUrl = 2;
  string UploadUrl = 3;
  string ImageID = 4;
  string WorkloadID = 5;
}

// The response message containing the greetings
message FilterReply {
  string filter = 1;
  string DownloadUrl = 2;
  string UploadUrl = 3;
  string ImageID = 4;
  string WorkloadID = 5;
}
